--- a/230214_(Docker).md
+++ b/230214_(Docker).md
@@ -28,8 +28,8 @@ pip list | grep -i pandas
 pip install pandas  
 ![poster](./img/2.png)
 
-3. 앞서 만든 (2번) 컨테이너에서 jupyter notebook 실행하기  
-3-1 pip를 사용해 jupyter 패키지 설치하기  
+## 3. 앞서 만든 (2번) 컨테이너에서 jupyter notebook 실행하기  
+3-1. pip를 사용해 jupyter 패키지 설치하기  
 pip install jupyter  
 3-2. jupyter notebook 실행(관리자 권한 포함) 및 웹브라우저에서 접속하기 port 번호는 여러분 마음대로   
 jupyter notebook --ip 0.0.0.0 --allow-root  
@@ -38,7 +38,8 @@ jupyter notebook --ip 0.0.0.0 --port 8999 --allow-root
 3-3. 노트북 파일 생성 후 코드 실행해보기  
 ![poster](./img/4.png)  
 ![poster](./img/5.png)  
-4. Dockerfile 을 사용한 이미지 만들기  
+
+## 4. Dockerfile 을 사용한 이미지 만들기  
 - Dockerfile에 포함될 내용  
 - 베이스 이미지는 python 3. x  
 - apt-get update  
