--- a/230214_(Docker).md
+++ b/230214_(Docker).md
@@ -48,6 +48,66 @@ jupyter notebook --ip 0.0.0.0 --port 8999 --allow-root
 - apt-get install -y python3-pip  
 - workdir /data/app  
 
+
+4-1. Docker 설치 패키지 만들기  
+nano docker_install.sh  
+cat docker_install.sh  
+sh docker_install.sh or ./docker_install.sh  
+exit  
+4-2. Jupyter-img 세팅  
+mkdir workspace  
+cd workspace  
+pwd  
+nano Dockerfile  
+nano requirements.txt  
+docker build -t jupyter-img .  
+docker images   
+4-3. 컨테이너 만들기    
+docker run -d -p 80:8888 -v $(pwd):/workspace --name jupyter-container -t jupyter-img  
+docker ps  
+docker logs jupyter-container  
+4-4. Jupyter Server 접속  
+Public IP 확인  
+
+```
+# docker_install.sh
+#!/bin/bash
+
+# basic update
+sudo apt-get update -y && sudo apt upgrade -y
+
+
+# install docker
+
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+
+sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
+
+sudo apt update -y
+
+apt-cache policy docker-ce
+
+sudo apt install -y docker-ce
+
+sudo usermod -aG docker $USER
+```
+```
+# Dockerfile
+FROM python:3.8
+WORKDIR /workspace
+COPY . /workspace
+RUN python -m pip install --upgrade pip
+RUN pip install -r requirements.txt
+ENTRYPOINT ["jupyter"]
+EXPOSE 8888
+CMD ["notebook", "--ip", "0.0.0.0", "--port", "8888", "--allow-root", "--NotebookApp.token='password'"]
+```
+```
+# requirements.txt
+jupyter
+pandas
+numpy
+```
 ---
 ```
 $ cat /etc/passwd
